--- a/css/style.css
+++ b/css/style.css
@@ -1,535 +1,572 @@
 *,
 html {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    --first-color: #191919;
-    --second-color: #f44708;
-    --third-color: #fff;
-    --fourth-color: #add7f6;
+  --first-color: #191919;
+  --second-color: #f44708;
+  --third-color: #fff;
+  --fourth-color: #add7f6;
 }
 
 body {
-    font-family: "Poppins", sans-serif;
-    background-color: var(--third-color);
-    min-height: 5000px;
+  font-family: "Poppins", sans-serif;
+  background-color: var(--third-color);
+  min-height: 5000px;
 }
-
 
 /* navbar */
 
 nav {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 50px;
-    box-shadow: 0 5px 10px var(--second-color);
-    padding: 1.4rem 8%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 9999;
-    background-color: var(--third-color);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  box-shadow: 0 5px 10px var(--second-color);
+  padding: 1.4rem 8%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+  background-color: var(--third-color);
 }
 
 nav .logo {
-    font-size: 1.5rem;
-    text-decoration: none;
-    font-weight: 700;
-    color: var(--second-color);
+  font-size: 1.5rem;
+  text-decoration: none;
+  font-weight: 700;
+  color: var(--second-color);
 }
 
 nav .navbar-nav {
-    width: 45%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    position: relative;
-    left: 24%;
+  width: 45%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+  left: 24%;
 }
 
 nav .navbar-nav a {
-    text-decoration: none;
-    color: var(--second-color);
-    font-weight: 400;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 6rem;
-    height: 2rem;
-    border-radius: 30px;
-    margin: 2.5rem 1rem;
-    transition: all 1s;
-    font-size: 1.1rem;
+  text-decoration: none;
+  color: var(--second-color);
+  font-weight: 400;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  width: 6rem;
+  height: 2rem;
+  border-radius: 30px;
+  margin: 2.5rem 1rem;
+  transition: all 1s;
+  font-size: 1.1rem;
+  margin-left: 2rem;
 }
 
 nav .navbar-nav a:hover {
-    color: var(--third-color);
-    background-color: var(--second-color);
+  color: var(--third-color);
+  background-color: var(--second-color);
+  width: 90%;
+  justify-content: center;
+  padding-left: 1.5rem;
 }
 
 nav .navbar-extra a {
-    text-decoration: none;
-    margin-top: 0.3rem;
-    font-size: 1rem;
-    color: var(--second-color);
+  text-decoration: none;
+  margin-top: 0.3rem;
+  font-size: 1rem;
+  color: var(--second-color);
 }
 
 #menu {
-    display: none;
+  display: none;
 }
-
 
 /* hero */
 
 .hero {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    /* min-height: 20%; */
-    margin-top: 10rem;
-    /* background-image: url(../img/identity3.jpg); */
-    /* background-size: 500px; */
-    /* background-repeat: no-repeat; */
-    /* background-position: 750px 0; */
-    /* position: relative; */
-    /* border: 2px solid black; */
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  /* min-height: 20%; */
+  margin-top: 10rem;
+  /* background-image: url(../img/identity3.jpg); */
+  /* background-size: 500px; */
+  /* background-repeat: no-repeat; */
+  /* background-position: 750px 0; */
+  /* position: relative; */
+  /* border: 2px solid black; */
 }
 
 .content {
-    font-size: 2rem;
-    position: relative;
-    left: 100px;
-    /* border: 2px solid black; */
+  font-size: 2rem;
+  position: relative;
+  left: 100px;
+  /* border: 2px solid black; */
 }
 
 .typing-txt {
-    display: flex;
+  display: flex;
 }
 
 .content .static-txt h2 {
-    color: var(--first-color);
-    line-height: 90px;
-    height: 90px;
+  color: var(--first-color);
+  line-height: 90px;
+  height: 90px;
 }
 
 .content .headline span {
-    color: var(--second-color);
+  color: var(--second-color);
 }
 
 .content .typing-txt .dynamic-txt {
-    margin-left: 15px;
-    line-height: 90px;
-    height: 90px;
-    overflow: hidden;
+  margin-left: 15px;
+  line-height: 90px;
+  height: 90px;
+  overflow: hidden;
 }
 
 .content .typing-txt .dynamic-txt ul li {
-    font-size: 3rem;
-    list-style: none;
-    font-weight: 600;
-    color: #f44708;
-    position: relative;
-    top: 0;
-    animation: slide 12s steps(4) infinite;
+  font-size: 3rem;
+  list-style: none;
+  font-weight: 600;
+  color: #f44708;
+  position: relative;
+  top: 0;
+  animation: slide 12s steps(4) infinite;
 }
 
 .content .typing-txt .dynamic-txt ul li::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: transparent;
-    border-left: 2px solid var(--second-color);
-    animation: typing 3s steps(10) infinite;
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: transparent;
+  border-left: 2px solid var(--second-color);
+  animation: typing 3s steps(10) infinite;
 }
 
 .content p {
-    font-size: 18px;
-    margin-bottom: 5px;
+  font-size: 18px;
+  margin-bottom: 5px;
 }
 
 button {
-    margin-top: 30px;
-    display: inline-block;
-    width: 10rem;
-    height: 3rem;
-    background-color: var(--third-color);
-    border: none;
-    border-radius: 7px;
-    font-size: 1rem;
-    color: var(--second-color);
-    border: 2px solid var(--second-color);
-    transition: 1s;
-    z-index: 999;
-    cursor: pointer;
+  margin-top: 30px;
+  display: inline-block;
+  width: 10rem;
+  height: 3rem;
+  background-color: var(--third-color);
+  border: none;
+  border-radius: 7px;
+  font-size: 1rem;
+  color: var(--second-color);
+  border: 2px solid var(--second-color);
+  transition: 1s;
+  z-index: 999;
+  cursor: pointer;
 }
 
 button.download {
-    background-color: var(--second-color);
-    color: var(--third-color);
-    border: 2px solid var(--second-color);
-    transition: 1s;
-    cursor: pointer;
+  background-color: var(--second-color);
+  color: var(--third-color);
+  border: 2px solid var(--second-color);
+  transition: 1s;
+  cursor: pointer;
 }
 
 button:hover {
-    background-color: var(--second-color);
-    color: var(--third-color);
-    border: 2px solid var(--second-color);
+  background-color: var(--second-color);
+  color: var(--third-color);
+  border: 2px solid var(--second-color);
 }
 
 button.download:hover {
-    background-color: var(--third-color);
-    color: var(--second-color);
+  background-color: var(--third-color);
+  color: var(--second-color);
 }
-
 
 /* about */
 
 .about-wrapper {
-    position: relative;
-    min-height: 800px;
+  position: relative;
+  min-height: 80;
 }
 
 .about-headline h3 {
-    font-size: 3rem;
-    font-weight: 700;
-    color: var(--third-color);
-    text-align: center;
-    position: absolute;
-    left: 35%;
-    top: 40px;
-    opacity: 1;
+  font-size: 3rem;
+  font-weight: 700;
+  color: var(--third-color);
+  text-align: center;
+  position: absolute;
+  left: 35%;
+  top: 40px;
+  opacity: 1;
 }
 
 svg {
-    transform: rotate(180deg);
-    z-index: -999;
-    opacity: 0.7;
+  transform: rotate(180deg);
+  z-index: -999;
+  opacity: 1;
 }
 
 .row {
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    left: 5%;
-    top: 8%;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  left: 5%;
+  top: 8%;
 }
 
 .card-wrapper {
-    width: 1240px;
-    padding: 50px;
-    margin-top: 100px;
-    display: flex;
-    justify-content: space-between;
+  width: 1240px;
+  padding: 50px;
+  margin-top: 100px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .card {
-    width: 300px;
-    height: 500px;
-    background-color: var(--third-color);
-    box-shadow: 5px 5px 3px var(--second-color);
-    border: 1px solid var(--second-color);
-    padding: 20px;
-    transition: 0.4s;
+  width: 300px;
+  height: 500px;
+  background-color: var(--third-color);
+  box-shadow: 5px 5px 3px var(--second-color);
+  border: 1px solid var(--second-color);
+  padding: 20px;
+  transition: 0.4s;
 }
 
 .card:hover {
-    transform: translateY(-20px);
+  transform: translateY(-20px);
 }
 
 .card .card-icon {
-    width: 100%;
-    height: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card .card-icon img {
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card .card-description {
-    height: 40%;
-    font-size: 0.9rem;
-    text-align: center;
-    display: flex;
-    align-items: center;
+  height: 40%;
+  font-size: 0.9rem;
+  text-align: center;
+  display: flex;
+  align-items: center;
 }
 
 .card .card-title h4 {
-    color: var(--second-color);
-    font-size: 1.5rem;
-    line-height: 30px;
-    text-align: center;
+  color: var(--second-color);
+  font-size: 1.5rem;
+  line-height: 30px;
+  text-align: center;
 }
 
 .card-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card-link a {
-    margin-top: 30px;
-    width: 70%;
-    height: 40px;
-    border: 1px solid var(--second-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: var(--second-color);
-    text-decoration: none;
-    transition: 0.8s;
+  margin-top: 30px;
+  width: 70%;
+  height: 40px;
+  border: 1px solid var(--second-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--second-color);
+  text-decoration: none;
+  transition: 0.8s;
 }
 
 .card-link a:hover {
-    background-color: var(--second-color);
-    color: var(--third-color);
+  background-color: var(--second-color);
+  color: var(--third-color);
 }
 
 @keyframes typing {
-    40%,
-    60% {
-        left: calc(100% + 30px);
-    }
-    100% {
-        left: 0;
-    }
+  40%,
+  60% {
+    left: calc(100% + 30px);
+  }
+  100% {
+    left: 0;
+  }
 }
 
 @keyframes slide {
-    100% {
-        top: -360px;
-    }
+  100% {
+    top: -360px;
+  }
 }
 
-
 /* responsive breakpoints */
-
 
 /* laptop */
 
 @media screen and (max-width: 1366px) {
-    html {
-        font-size: 90%;
-    }
+  html {
+    font-size: 90%;
+  }
 }
-
 
 /* tablet */
 
 @media screen and (max-width: 768px) {
-    html {
-        font-size: 62.5%;
-    }
-    /* nav .navbar-nav { */
-    /* position: absolute; */
-    /* top: 100%; */
-    /* right: -100%; */
-    /* background-color: #fff; */
-    /* width: 30rem; */
-    /* height: 100vh; */
-    /* transition: 1s; */
-    /* border: 1px solid var(--second-color); */
-    /* z-index: 999; */
+  html {
+    font-size: 62.5%;
+  }
+  nav .navbar-nav {
+    position: absolute;
+    display: block;
+    top: -450%;
+    left: 0;
+    width: 100%;
+    height: 18rem;
+    box-shadow: 0 5px 10px #707070;
+    z-index: -9999;
+    transition: all 2s;
+    background-color: var(--third-color);
+    overflow: hidden;
+    opacity: 0;
+  }
+  /*  */
+  nav .navbar-nav.active {
+    top: 102%;
+    opacity: 1;
+  }
 }
 
-
-/*  */
-
-
-/* nav .navbar-nav.active { */
-
-
-/* right: 0; */
-
-
-/* } */
-
 nav .navbar-nav a:hover {
-    background-color: var(--second-color);
-    color: #fff;
+  background-color: var(--second-color);
+  color: #fff;
+  width: 90%;
 }
 
 #menu {
-    /* display: inline-block; */
-    font-size: 2rem;
-    font-weight: 400;
+  display: inline-block;
+  font-size: 2rem;
+  font-weight: 400;
 }
 
 .content .headline {
-    position: relative;
-    left: -60px;
-    top: 0;
-    font-size: 2.8rem;
+  position: relative;
+  left: -60px;
+  top: 0;
+  font-size: 2.8rem;
 }
 
 .content .headline span {
-    display: block;
+  display: block;
 }
 
 .content .typing-txt {
-    position: relative;
-    left: -60px;
-    top: -70px;
-    line-height: 10px;
-    font-size: 2.7rem;
-    /* display: block; */
+  position: relative;
+  left: -60px;
+  top: -70px;
+  line-height: 10px;
+  font-size: 2.7rem;
+  /* display: block; */
 }
 
 .content .typing-txt .dynamic-txt ul li span {
-    font-size: 3.5rem;
+  font-size: 3.5rem;
 }
 
 .content .typing-txt .dynamic-txt ul li::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    height: 80%;
-    width: 100%;
-    background-color: var(--third-color);
-    border-left: 2px solid var(--second-color);
-    animation: typing 3s steps(10) infinite;
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 80%;
+  width: 100%;
+  background-color: var(--third-color);
+  border-left: 2px solid var(--second-color);
+  animation: typing 3s steps(10) infinite;
 }
 
 .content .typing-txt .dynamic-txt {
-    margin-left: 15px;
-    line-height: 90px;
-    height: 90px;
-    overflow: hidden;
+  margin-left: 15px;
+  line-height: 90px;
+  height: 90px;
+  overflow: hidden;
 }
 
 .content p {
-    position: relative;
-    left: -60px;
-    top: -80px;
-    font-size: 1.2rem;
+  position: relative;
+  left: -60px;
+  top: -80px;
+  font-size: 1.2rem;
 }
 
 .content button {
-    width: 15rem;
-    height: 5rem;
-    font-size: 1.7rem;
-    /* z-index: -999; */
+  width: 15rem;
+  height: 5rem;
+  font-size: 1.7rem;
+  /* z-index: -999; */
 }
-
 
 /* mobile phone */
 
 @media screen and (max-width: 450px) {
-    html {
-        font-size: 55%;
-    }
-    nav .navbar-nav {
-        position: absolute;
-        display: block;
-        top: -450%;
-        left: 0;
-        width: 100%;
-        height: 18rem;
-        box-shadow: 0 5px 10px #707070;
-        z-index: -9999;
-        transition: all 2s;
-        background-color: var(--third-color);
-        overflow: hidden;
-        opacity: 0;
-    }
-    nav .navbar-nav.active {
-        top: 100%;
-        opacity: 1;
-    }
-    nav .navbar-nav a {
-        font-size: 1.3rem;
-        display: flex;
-        margin-left: 2rem;
-        transition: all 2s;
-    }
-    nav .navbar-nav a:hover {
-        width: 90%;
-    }
-    nav .logo {
-        font-size: 2.5rem;
-    }
-    #menu {
-        display: inline-block;
-    }
+  html {
+    font-size: 55%;
+    width: 30%;
+  }
+  nav {
+    position: fixed;
+    top: 0;
+  }
+  nav .navbar-nav {
+    position: absolute;
+    display: block;
+    top: -450%;
+    left: 0;
+    width: 100%;
+    height: 18rem;
+    box-shadow: 0 5px 10px #707070;
+    z-index: -9999;
+    transition: all 1.2s ease-in-out;
+    background-color: var(--third-color);
+    overflow: hidden;
+    opacity: 0;
+  }
+  nav .navbar-nav.active {
+    top: 100%;
+    opacity: 1;
+  }
+  nav .navbar-nav a {
+    font-size: 1.3rem;
+    display: flex;
+    margin-left: 2rem;
+    transition: all 2;
+    height: 2.5rem;
+  }
+  nav .navbar-nav a:hover {
+    width: 90%;
+  }
+  nav .logo {
+    font-size: 2.5rem;
+  }
+  #menu {
+    display: inline-block;
+  }
 }
-
 
 /* hero */
 
 .hero {
-    min-height: 59vh;
-    /* border: 2px solid black; */
-    margin-top: 12rem;
-    /* z-index: -9999; */
+  min-height: 58%;
+  /* border: 2px solid black; */
+  margin-top: 8rem;
+  /* z-index: -9999; */
+  position: relative;
+  overflow: hidden;
 }
 
 .hero .content {
-    margin-right: 12rem;
-    font-size: 2rem;
-    /* z-index: -999; */
+  margin-right: 12rem;
+  font-size: 2rem;
+  /* z-index: -999; */
 }
 
-.hero .content .headline {
-    font-size: 2.5rem;
+.hero .content .headline h2 {
+  font-size: 3rem;
+  margin-top: 5rem;
+  /* padding-top: 6rem; */
+  /* border: 2px solid black; */
+}
+
+.hero .content .headline span {
+  font-size: 3rem;
 }
 
 .hero .content .typing-txt {
-    font-size: 2rem;
-    margin-top: 1.5rem;
+  font-size: 2rem;
+  /* margin-top: -1.5rem; */
 }
 
 .hero .content .static-txt {
-    font-size: 2.5rem;
+  font-size: 2.5rem;
+  margin-top: 2.3rem;
 }
 
 .hero .content .dynamic-txt {
-    font-size: 2.6rem;
+  font-size: 2.6rem;
+  margin-top: 2.2rem;
 }
 
 .hero .content p {
-    z-index: 999;
-    font-size: 1.5rem;
+  z-index: 999;
+  font-size: 1.6rem;
+  margin-top: 2rem;
 }
 
 .hero img {
-    position: absolute;
-    right: -21rem;
-    width: 100%;
-    /* z-index: 999; */
+  position: absolute;
+  right: -23rem;
+  width: 100%;
+  /* z-index: 999; */
 }
 
 .content .typing-txt .dynamic-txt ul li::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: var(--third-color);
-    border-left: 2px solid var(--second-color);
-    animation: typing 3s steps(10) infinite;
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: var(--third-color);
+  border-left: 2px solid var(--second-color);
+  animation: typing 3s steps(10) infinite;
+  /* z-index: 999; */
+}
+
+.content .typing-txt .dynamic-txt {
+  margin-left: 15px;
+  line-height: 89.5px;
+  height: 90px;
+  overflow: hidden;
 }
 
 button {
-    position: relative;
-    top: -6.5rem;
-    left: -7rem;
+  position: relative;
+  top: -9rem;
+  left: -6rem;
 }
 
-
 /* about */
+
+svg {
+  position: relative;
+  top: -1.9rem;
+  height: 100%;
+}
+
+.card-wrapper {
+  display: block;
+}
+
+.card {
+  margin-bottom: 5rem;
+}
+
+.card-wrapper .card .card-title {
+  font-size: 50rem;
+}
